test/error/badforn1.luau
local init, limit, step = "hello", 10, 2

for i = init, limit, step do
	print(i)
end
